<resources>
    <string name="app_name">Fitness</string>

    <string name="btn_save">Save</string>
    <string name="profile_name">Name</string>
    <string name="profile_age">Age</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_gender">Gender</string>
    <string name="profile">Profile</string>
    <string name="profile_title">Profile info</string>
    <string name="settings2">Settings</string>
    <string name="trainings">Trainings</string>
    <string name="statistics">Statistics</string>
    <string name="days">Days</string>
    <string name="text1">Specify your</string>
    <string name="text3">Specify</string>
    <string name="text2">My Type</string>
    <string name="Men">Men</string>
    <string name="Woman">Woman</string>
    <string name="tasklist">Task list</string>
    <string name="statistics_weight">Your weight changing dynamic:</string>
    <string name="MoreInf">More Information</string>
    <string name="registration">Log In</string>
    <string name="goback">back</string>
    <string name="MassIndex">Your Body mass index:</string>
    <string name="MassIndex2">\mNormal BMI😉</string>
    <string name="BadData">Data entered incorrectly</string>
    <string name="MassIndex3">\mAre you overweight😬</string>
    <string name="MassIndex4">\nYou are underweight😰</string>

    //Добавила для главного экрана
    <string name="log_in">Log in</string>
    <string name="app_name2">Fitness</string>
    <string name="energize">Energize your life</string>
    <string name="do_sport">Do sport! Take care of youself!</string>

    //Заголовки (возможно не понадобятся)
    <string name="fragment_statistics_name">Statistics</string>

    //Названия файлов хранения
    <string name="preference_weight" translatable="false">preference_weight</string>
    <string name="preference_profilesettings" translatable="false">preference_profileSettings</string>

    //То, что не нужно переводить
    <string name="imageDescription_arrowBack" translatable="false">Arrow back Icon</string>
    <string name="imageDescription_backgroundImage" translatable="false">Image Background</string>

    <string name="btn_get_started">Start</string>

    <string name="preference_profilemoresettings">fffffffff</string>
</resources>